terraform/modules/security_group/main.tf
resource "aws_security_group" "sg" {
  name = "vpc-sg"
  description = "The security group"
  vpc_id = var.vpc_id


  ingress {
    from_port = 80
    protocol  = "tcp"
    to_port   = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

    ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "server-${var.infra_env}-web-security-group"
    Project = var.project_name
    Environment = var.infra_env
  }
}
